[wip] Initial customers service working release
